[explorer,css][xs]: fix alignment of slider bar with slider 'tick'.

--- a/src/css/explorer.css
+++ b/src/css/explorer.css
@@ -29,4 +29,5 @@ div#controls {
 .ui-slider-horizontal .ui-slider-handle {
   height: 12px;
   width: 4px;
+  margin-left: -0.1em;
 }
